--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
   <link href="base.css" rel="stylesheet" type="text/css">
   <link href="layout.css" rel="stylesheet" type="text/css">
   <link href="modules.css" rel="stylesheet" type="text/css">
+  <link href="grid.css" rel="stylesheet" type="text/css">
   <title>Code 301 Lab 01</title>
 </head>
 <body>
-  <div class="center">
-    <div id="a">a</div>
-    <div id="b">b</div>
-    <div id="c">c</div>
-    <div id="d">d</div>
-    <div class="block">
-      <div id="e">e</div>
-      <div id="f">f</div>
-      <div id="g">g</div>
-      <div id="h">h</div>
-      <div id="i">i</div>
-    </div>
-  </div>
+  <main>
+      <div id="a">a</div>
+      <div id="b">b</div>
+      <div id="c">c</div>
+      <div id="d">d</div>
+      <div class="block">
+        <div id="e">e</div>
+        <div id="f">f</div>
+        <div id="g">g</div>
+        <div id="h">h</div>
+        <div id="i">i</div>
+      </div>
+  </main>
 </body>
 </html>
