--- a/index.html
+++ b/index.html
@@ -3,25 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="reset.css" rel="stylesheet" type="text/css">
-  <link href="base.css" rel="stylesheet" type="text/css">
-  <link href="layout.css" rel="stylesheet" type="text/css">
-  <link href="modules.css" rel="stylesheet" type="text/css">
+  <link href="css/reset.css" rel="stylesheet" type="text/css">
+  <link href="css/base.css" rel="stylesheet" type="text/css">
+  <link href="css/layout.css" rel="stylesheet" type="text/css">
+  <link href="css/modules.css" rel="stylesheet" type="text/css">
+  <link href="css/grid.css" rel="stylesheet" type="text/css">
   <title>Code 301 Lab 01</title>
 </head>
 <body>
-  <div class="center">
+  <main>
     <div id="a">a</div>
     <div id="b">b</div>
     <div id="c">c</div>
     <div id="d">d</div>
-    <div class="block">
-      <div id="e">e</div>
-      <div id="f">f</div>
-      <div id="g">g</div>
-      <div id="h">h</div>
-      <div id="i">i</div>
-    </div>
-  </div>
+    <div id="e">e</div>
+    <div id="f">f</div>
+    <div id="g">g</div>
+    <div id="h">h</div>
+    <div id="i">i</div>
+  </main>
 </body>
 </html>
